Fixed the overflow issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,4 +11,5 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
